--- a/docker-compose/pattern-3/docker-compose.yml
+++ b/docker-compose/pattern-3/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  apim_rdbms:
+  apic-rdbms:
     image: docker.wso2.com/apim-pattern3-mysql:5.5
     build:
         context: ../
