--- a/rancher-compose/docker-compose.yml
+++ b/rancher-compose/docker-compose.yml
@@ -4,7 +4,7 @@ analytics:
     - "9448:9444"
     - "7712:7712"
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
   labels:
       io.rancher.scheduler.affinity:host_label: service=analytics
 traffic-manager:
@@ -12,7 +12,7 @@ traffic-manager:
   ports:
     - "9447:9443"
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
   links:
     - analytics
   labels:
@@ -22,7 +22,7 @@ keymanager:
   ports:
     - "9443:9443"
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
     - "keymanager:127.0.0.1"
   links:
     - analytics
@@ -33,7 +33,7 @@ gateway-manager:
   ports:
     - "9444:9443"
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
     - "gateway-manager:127.0.0.1"
   links:
     - analytics
@@ -50,7 +50,7 @@ gateway-worker:
     - analytics
     - keymanager
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
     - "gateway-worker:127:0.0.1"
   labels:
       io.rancher.scheduler.affinity:host_label: service=gateway
@@ -59,7 +59,7 @@ store:
   ports:
     - "9446:9443"
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
     - "store:127.0.0.1"
   links:
     - analytics
@@ -71,7 +71,7 @@ publisher:
   ports:
     - "9445:9443"
   extra_hosts:
-    - "apim_rdbms:'"{RDBMS_IP}"'"
+    - "apim_rdbms:{RDBMS_IP}"
     - "publisher:127.0.0.1"
   links:
     - keymanager
