--- a/developer/docker-compose.yml
+++ b/developer/docker-compose.yml
@@ -1,5 +1,5 @@
 apim_rdbms:
-  image: sysco/apic-mysql:latest
+  image: sysco/apim-mysql:2.1.0
   environment:
         MYSQL_ROOT_PASSWORD: root
   ports:
