--- a/docker-compose/pattern-3/keymanager/Dockerfile
+++ b/docker-compose/pattern-3/keymanager/Dockerfile
@@ -7,3 +7,5 @@ COPY artifacts/mysql-connector-java-5.1.34-bin.jar /mnt/wso2-artifacts/repositor
 USER root
 
 RUN rm -r /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml
+RUN chmod 755 /mnt/wso2-artifacts/bin
+RUN chmod -R 755 /mnt/wso2-artifacts/reposito
