--- a/docker-compose/pattern-3/store/Dockerfile
+++ b/docker-compose/pattern-3/store/Dockerfile
@@ -5,3 +5,6 @@ COPY pattern-3/store/carbon/ /mnt/wso2-artifacts
 COPY artifacts/mysql-connector-java-5.1.34-bin.jar /mnt/wso2-artifacts/repository/components/lib/
 
 RUN rm -r /mnt/wso2am-2.1.0/repository/deployment/server/synapse-configs/default/inbound-endpoints/WebSocketInboundEndpoint.xml
+USER root
+RUN chmod 755 /mnt/wso2-artifacts/bin
+RUN chmod -R 755 /mnt/wso2-artifacts/reposito
