--- a/docker-compose/pattern-3/traffic-manager/Dockerfile
+++ b/docker-compose/pattern-3/traffic-manager/Dockerfile
@@ -23,3 +23,6 @@ RUN mv /mnt/wso2am-2.1.0/repository/conf/registry_TM.xml /mnt/wso2am-2.1.0/repos
 
 RUN rm /mnt/wso2am-2.1.0/repository/conf/axis2/axis2.xml
 RUN mv /mnt/wso2am-2.1.0/repository/conf/axis2/axis2_TM.xml /mnt/wso2am-2.1.0/repository/conf/axis2/axis2.xml
+USER root
+RUN chmod 755 /mnt/wso2-artifacts/bin
+RUN chmod -R 755 /mnt/wso2-artifacts/reposito
